--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,58 @@
 </head>
 <body>
   
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <a class="logo" href="!#">
+          <img class="logo__img" src="images/header/logo.png" alt="logo">
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="!#">home</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="!#">shope</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="!#">page</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="!#">blog</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="!#">contact</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="user-nav">
+          <a class="user-nav__link" href="!#">
+            <img class="user-nav__link-img" src="images/header/user.svg" alt="icon">
+          </a>
+          <a class="user-nav__link" href="!#">
+            <img class="user-nav__link-img" src="images/header/search.svg" alt="icon">
+          </a>
+          <a class="user-nav__link" href="!#">
+            <span class="user-nav__num">3</span>
+            <img class="user-nav__link-img" src="images/header/heart.svg" alt="icon">
+          </a>
+          <a class="user-nav__link" href="!#">
+            <span class="user-nav__num">3</span>
+            <img class="user-nav__link-img" src="images/header/cart.svg" alt="icon">
+          </a>
+        </div>
+      </div>
+    </div>
+  </header>
+
+
+
+
+
+
+
+
   <script src="js/main.min.js"></script>
 </body>
 </html>
