added top slider

--- a/app/index.html
+++ b/app/index.html
@@ -12,40 +12,40 @@
   <header class="header">
     <div class="container">
       <div class="header__inner">
-        <a class="logo" href="!#">
+        <a class="logo" href="#!">
           <img class="logo__img" src="images/header/logo.png" alt="logo">
         </a>
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__list-item">
-              <a class="menu__list-link" href="!#">home</a>
+              <a class="menu__list-link" href="#!">home</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="!#">shope</a>
+              <a class="menu__list-link" href="#!">shope</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="!#">page</a>
+              <a class="menu__list-link" href="#!">page</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="!#">blog</a>
+              <a class="menu__list-link" href="#!">blog</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="!#">contact</a>
+              <a class="menu__list-link" href="#!">contact</a>
             </li>
           </ul>
         </nav>
         <div class="user-nav">
-          <a class="user-nav__link" href="!#">
+          <a class="user-nav__link" href="#!">
             <img class="user-nav__link-img" src="images/header/user.svg" alt="icon">
           </a>
-          <a class="user-nav__link" href="!#">
+          <a class="user-nav__link" href="#!">
             <img class="user-nav__link-img" src="images/header/search.svg" alt="icon">
           </a>
-          <a class="user-nav__link" href="!#">
+          <a class="user-nav__link" href="#!">
             <span class="user-nav__num">3</span>
             <img class="user-nav__link-img" src="images/header/heart.svg" alt="icon">
           </a>
-          <a class="user-nav__link" href="!#">
+          <a class="user-nav__link" href="#!">
             <span class="user-nav__num">3</span>
             <img class="user-nav__link-img" src="images/header/cart.svg" alt="icon">
           </a>
@@ -54,7 +54,72 @@
     </div>
   </header>
   <main class="main">
-    
+    <section class="top-slider">
+      <div class="container top-slider__container">
+        <div class="top-slider__inner">
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">
+                New Season<br />
+                New Brand Collection
+              </h3>
+              <p class="top-slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do et dolore magna aliqua. Ipsum.
+              </p>
+              <a class="top-slider__link btn-temp" href="#!">
+                Buy now
+              </a>
+            </div>
+            <img class="top-slider__img" src="images/topslider/photo.png" alt="img">
+          </div>
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">
+                New Season<br/>
+                New Brand Collection
+              </h3>
+              <p class="top-slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do et dolore magna aliqua. Ipsum.
+              </p>
+              <a class="top-slider__link btn-temp" href="#!">
+                Buy now
+              </a>
+            </div>
+            <img class="top-slider__img" src="images/topslider/photo.png" alt="img">
+          </div>
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">
+                New Season<br/>
+                New Brand Collection
+              </h3>
+              <p class="top-slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do et dolore magna aliqua. Ipsum.
+              </p>
+              <a class="top-slider__link btn-temp" href="#!">
+                Buy now
+              </a>
+            </div>
+            <img class="top-slider__img" src="images/topslider/photo.png" alt="img">
+          </div>
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">
+                New Season<br/>
+                New Brand Collection
+              </h3>
+              <p class="top-slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do et dolore magna aliqua. Ipsum.
+              </p>
+              <a class="top-slider__link btn-temp" href="#!">
+                Buy now
+              </a>
+            </div>
+            <img class="top-slider__img" src="images/topslider/photo.png" alt="img">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
@@ -164,7 +229,7 @@
           </p>
           <form class="footer-top__form">
             <input class="footer-top__form-input" placeholder="Your email adress" type="email" required>
-            <button class="footer-top__form-btn" type="submit">subscribe</button>
+            <button class="footer-top__form-btn btn-temp" type="submit">subscribe</button>
           </form>
         </div>
       </div>
