--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,109 @@
         </div>
       </div>
     </section>
+    <section class="categories-info">
+      <div class="categories-info__inner">
+      <div class="container">
+        <div class="info">
+          <div class="info__item">
+            <svg width="60px" height="60px">
+              <use xlink:href="images/categories/sprite.svg#free-ship">
+
+              </use>
+            </svg>
+            <h5 class="info__item-title">
+              Free Shipping Order $100
+            </h5>
+            <p class="info__item-text">
+              Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do
+            </p>
+          </div>
+          <div class="info__item">
+            <svg width="60px" height="60px">
+              <use xlink:href="images/categories/sprite.svg#return">
+
+              </use>
+            </svg>
+            <h5 class="info__item-title">
+              30 Days Easy Return
+            </h5>
+            <p class="info__item-text">
+              Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do
+            </p>
+          </div>
+          <div class="info__item">
+            <svg width="60px" height="60px">
+              <use xlink:href="images/categories/sprite.svg#support">
+
+              </use>
+            </svg>
+            <h5 class="info__item-title">
+              24/7 Customer Support
+            </h5>
+            <p class="info__item-text">
+              Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do
+            </p>
+          </div>
+        </div>
+        <div class="categories">
+          <h2 class="title">
+            TOP CATEGORIES
+          </h2>
+          <div class="text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae reprehenderit incidunt blanditiis
+            corporis voluptas quam repellendus animi!
+          </div>
+          <div class="categories__items">
+            <div class="categories__item" style="background-image: url('images/categories/jewellry.jpg');">
+              <div class="categories__item-subtitle">
+                Up To 40% Off
+              </div>
+              <h4 class="categories__item-title">
+                Shoes & Jewellry
+              </h4>
+              <a class="categories__item-link">
+                EXPLORE MORE
+              </a>
+            </div>
+            <div class="categories__item" style="background-image: url('images/categories/accessories.jpg');">
+              <div class="categories__item-subtitle">
+                New Arrival
+              </div>
+              <h4 class="categories__item-title">
+                Clothes & Accessories
+              </h4>
+              <a class="categories__item-link">
+                EXPLORE MORE
+              </a>
+            </div>
+            <div class="categories__item" style="background-image: url('images/categories/men.jpg');">
+              <div class="categories__item-subtitle">
+                New Arrival
+              </div>
+              <h4 class="categories__item-title">
+                Men’s Fashion
+              </h4>
+              <a class="categories__item-link">
+                EXPLORE MORE
+              </a>
+            </div>
+            <div class="categories__item" style="background-image: url('images/categories/girl.jpg');">
+              <div class="categories__item-subtitle">
+                Hot Collection
+              </div>
+              <h4 class="categories__item-title">
+                Girl’s Fashion
+              </h4>
+              <a class="categories__item-link">
+                EXPLORE MORE
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
+
   </main>
   <footer class="footer">
     <div class="container">
