--- a/app/index.html
+++ b/app/index.html
@@ -249,6 +249,240 @@
         </div>
       </div>
     </section>
+    <section class="product">
+      <div class="container">
+        <h3 class="title">
+          TRENDING PRODUCTS
+        </h3>
+        <p class="text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodmoe tempor incididunt ut labore et
+          dolore aliqua.
+        </p>
+        <div class="product__items">
+
+          <div class="product-item">
+            <div class="product-item__img-box">
+              <img class="product-item__images" src="images/product/1.jpg" alt="img">
+              <div class="product-item__link-box">
+                <a class="product-item__link" href="#!">
+                  <svg width="20px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#search">
+
+                    </use>
+                  </svg>
+                </a>
+                <a class="product-item__link product-item__link--line" href="#!">
+                  <svg width="16px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#bag">
+
+                    </use>
+                  </svg>
+                </a>
+                <a class="product-item__link" href="#!">
+                  <svg width="22px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#heart">
+
+                    </use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="star" data-rateyo-rating="4.5"></div>
+            <h4 class="product-item__title">
+              White Polo Men’s T-Shirt
+            </h4>
+            <div class="product-item__price">
+              <div class="product-item__price-new">$34.00</div>
+              <div class="product-item__price-old">$40.00</div>
+            </div>
+          </div>
+          <div class="product-item product-item--sale">
+            <div class="product-item__img-box">
+              <img class="product-item__images" src="images/product/1.jpg" alt="img">
+              <div class="product-item__link-box">
+                <a class="product-item__link" href="#!">
+                  <svg width="20px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#search">
+
+                    </use>
+                  </svg>
+                </a>
+                <a class="product-item__link product-item__link--line" href="#!">
+                  <svg width="16px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#bag">
+
+                    </use>
+                  </svg>
+                </a>
+                <a class="product-item__link" href="#!">
+                  <svg width="22px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#heart">
+
+                    </use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="star" data-rateyo-rating="4.5"></div>
+            <h4 class="product-item__title">
+              White Polo Men’s T-Shirt
+            </h4>
+            <div class="product-item__price">
+              <div class="product-item__price-new">$34.00</div>
+              <div class="product-item__price-old">$40.00</div>
+            </div>
+          </div>
+          <div class="product-item">
+            <div class="product-item__img-box">
+              <img class="product-item__images" src="images/product/1.jpg" alt="img">
+              <div class="product-item__link-box">
+                <a class="product-item__link" href="#!">
+                  <svg width="20px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#search">
+
+                    </use>
+                  </svg>
+                </a>
+                <a class="product-item__link product-item__link--line" href="#!">
+                  <svg width="16px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#bag">
+
+                    </use>
+                  </svg>
+                </a>
+                <a class="product-item__link" href="#!">
+                  <svg width="22px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#heart">
+
+                    </use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="star" data-rateyo-rating="5"></div>
+            <h4 class="product-item__title">
+              White Polo Men’s T-Shirt
+            </h4>
+            <div class="product-item__price">
+              <div class="product-item__price-new">$34.00</div>
+              <div class="product-item__price-old">$40.00</div>
+            </div>
+          </div>
+          <div class="product-item product-item--sale">
+            <div class="product-item__img-box">
+              <img class="product-item__images" src="images/product/1.jpg" alt="img">
+              <div class="product-item__link-box">
+                <a class="product-item__link" href="#!">
+                  <svg width="20px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#search">
+
+                    </use>
+                  </svg>
+                </a>
+                <a class="product-item__link product-item__link--line" href="#!">
+                  <svg width="16px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#bag">
+
+                    </use>
+                  </svg>
+                </a>
+                <a class="product-item__link" href="#!">
+                  <svg width="22px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#heart">
+
+                    </use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="star" data-rateyo-rating="4"></div>
+            <h4 class="product-item__title">
+              White Polo Men’s T-Shirt
+            </h4>
+            <div class="product-item__price">
+              <div class="product-item__price-new">$34.00</div>
+              <div class="product-item__price-old">$40.00</div>
+            </div>
+          </div>
+          <div class="product-item">
+            <div class="product-item__img-box">
+              <img class="product-item__images" src="images/product/1.jpg" alt="img">
+              <div class="product-item__link-box">
+                <a class="product-item__link" href="#!">
+                  <svg width="20px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#search">
+
+                    </use>
+                  </svg>
+                </a>
+                <a class="product-item__link product-item__link--line" href="#!">
+                  <svg width="16px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#bag">
+
+                    </use>
+                  </svg>
+                </a>
+                <a class="product-item__link" href="#!">
+                  <svg width="22px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#heart">
+
+                    </use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="star" data-rateyo-rating="4.5"></div>
+            <h4 class="product-item__title">
+              White Polo Men’s T-Shirt
+            </h4>
+            <div class="product-item__price">
+              <div class="product-item__price-new">$34.00</div>
+              <div class="product-item__price-old">$40.00</div>
+            </div>
+          </div>
+          <div class="product-item product-item--sale">
+            <div class="product-item__img-box">
+              <img class="product-item__images" src="images/product/1.jpg" alt="img">
+              <div class="product-item__link-box">
+                <a class="product-item__link" href="#!">
+                  <svg width="20px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#search">
+
+                    </use>
+                  </svg>
+                </a>
+                <a class="product-item__link product-item__link--line" href="#!">
+                  <svg width="16px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#bag">
+
+                    </use>
+                  </svg>
+                </a>
+                <a class="product-item__link" href="#!">
+                  <svg width="22px" height="20px">
+                    <use xlink:href="images/product/sprite.svg#heart">
+
+                    </use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="star" data-rateyo-rating="4"></div>
+            <h4 class="product-item__title">
+              White Polo Men’s T-Shirt
+            </h4>
+            <div class="product-item__price">
+              <div class="product-item__price-new">$34.00</div>
+              <div class="product-item__price-old">$40.00</div>
+            </div>
+          </div>
+
+        </div>
+        <a class="product__link btn-two" href="#!">
+          load more
+        </a>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
